--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/.css/4.1.1/.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -47,7 +47,7 @@
     </nav>
 
 
-    <section class="animate__animated animate__fadeInUp animate__slow 	1s animate__delay-1s">
+    <section class="__d __fadeInUp __slow 	1s __delay-1s">
         <div class="banner">
             <img src="img/banner.jpg" alt="">
             <div class="overlay"></div>
@@ -62,7 +62,7 @@
 
     <section class="my-5">
         <div class="container-fluid">
-            <div class=" animate__animated animate__zoomIn animate__slow	1s animate__delay-2s text d-flex align-items-center justify-content-center ">
+            <div class=" __d __zoomIn __slow	1s __delay-2s text d-flex align-items-center justify-content-center ">
                 <h1 class="text-center Services mb-5 pb-2"
                     style="border-bottom: 3px solid rgba(252, 203, 30);;width: 90px;">
                     خدماتنا
@@ -70,7 +70,7 @@
 
             </div>
             <div
-                class=" animate__animated animate__fadeInUp animate__slow	3s animate__delay-3s box-main d-flex flex-column flex-md-row align-items-center justify-content-center gap-4   ">
+                class=" __d __fadeInUp __slow	3s __delay-3s box-main d-flex flex-column flex-md-row align-items-center justify-content-center gap-4   ">
                 <a href="https://wa.link/dgvj72">
                     <div class="box2  ">
                         <img src="img/1.png" width="100px" height="70px" alt="" srcset="">
